docs/000.eks/005.ingress/003.etisalat/001.alb_ingress-rmsinfo-dashboard-stage-etisalat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingressgateway-dashboard-alb-stage-salat
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: myinfo-dashboard-stg-salat
    alb.ingress.kubernetes.io/subnets: subnet-08faf6e82ec7efa77, subnet-004b532cf812b1f66
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn:  "arn:aws:acm:ap-northeast-2:088356671508:certificate/6dfe8103-265b-4993-a9dc-94ea7fc22949"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    #alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-port: '32208'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
          "Type": "redirect",
          "RedirectConfig": {
          "Protocol": "HTTPS",
          "Port": "443",
          "StatusCode": "HTTP_301"
         }
      }
spec:
  rules:
  - host: "*.myinfo.net"
    http:
      paths:
       - backend:
           service:
             name: ssl-redirect
             port:
               name: use-annotation
         path: /
         pathType: Prefix
       - backend:
           service:
             name: istio-ingressgateway-dashboard-alb-stage-salat
             port:
               number: 80
         path: /
         pathType: Prefix
